fixed spacing and responsiveness, added Ipad pro sizing

--- a/style.css
+++ b/style.css
@@ -627,7 +627,8 @@ justify-content: space-between;
   padding-bottom: 1%;
   text-decoration: none !important;
   list-style: none;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  line-height: 1.1em;
   display: inline-block;
   position: relative;
   text-align: center;
@@ -744,6 +745,21 @@ justify-content: space-between;
   height: 315px;
 }
 
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9*/
+  position: relative;
+}
+
+.iframe-container iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
+
 .header {
   display: flex;
   width: 50%;
@@ -766,7 +782,71 @@ justify-content: space-between;
   font-size: 0.75em;
 }
 
-@media all and (max-width: 991px) {
+@media (min-width: 992px) and (max-width: 1024px) {
+  body {
+    100vw;
+  }
+
+  .scrolls {
+    display: none;
+  }
+
+  .wheader {
+    margin-top: -17%;
+  }
+
+  .menuitems {
+    line-height: 1.5em;
+    font-size: 3em;
+  }
+
+  .fast, .blinking {
+    margin-top: 20%;
+  }
+
+  .sub {
+    margin-top: 20%;
+  }
+
+  .center h1 {
+    font-size: 15em!important;
+  }
+
+  .wbox img {
+    height: 30vw;
+  }
+
+  #headshot {
+    width: 16vw;
+    margin-right: -4%;
+  }
+
+  .iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+  }
+
+  .iframe-container iframe {
+     border: 0;
+     height: 100%;
+     left: 0;
+     position: absolute;
+     top: 0;
+     width: 100%;
+  }
+
+  .header {
+    width: 76%;
+  }
+
+  .headerblink {
+    width: 35%;
+  }
+
+}
+
+@media (min-width: 769px) and (max-width: 991px) {
   body {
     width: 100vw;
   }
@@ -777,6 +857,29 @@ justify-content: space-between;
 
   h3 {
     width: 100%;
+  }
+
+  .iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+  }
+
+  .iframe-container iframe {
+     border: 0;
+     height: 100%;
+     left: 0;
+     position: absolute;
+     top: 0;
+     width: 100%;
+  }
+
+  .headerblink {
+    width: 37%;
+  }
+
+  .easy .header {
+    width: 80%;
   }
 
   .header {
@@ -790,13 +893,17 @@ justify-content: space-between;
     margin-top: -10%;
     font-size: 4em !important;
   }
+  
+  .menuitems {
+    line-height: 1.4em;
+  }
 
   #bijouHead {
     width: 47vw;
   }
 }
 
-@media all and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 768px) {
   body {
     font-size: 0.9em;
   }
@@ -848,6 +955,21 @@ justify-content: space-between;
     line-height: 1.75em;
   }
 
+  .iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+  }
+
+  .iframe-container iframe {
+     border: 0;
+     height: 100%;
+     left: 0;
+     position: absolute;
+     top: 0;
+     width: 100%;
+  }
+
   .wbox img {
     height: 30vh;
     width: 40vw;
@@ -867,7 +989,8 @@ justify-content: space-between;
   }
 }
 
-@media all and (max-width: 480px) {
+
+@media (min-width: 376px) and (max-width: 480px) {
   body {
     font-size: 0.8em;
   }
@@ -889,7 +1012,7 @@ justify-content: space-between;
      position: absolute;
      top: 0;
      width: 100%;
-  }}
+  }
 
   .menuitems {
     line-height: 2.3em !important;
@@ -986,12 +1109,6 @@ justify-content: space-between;
     width: 375px;
   }
 
-  /* .z {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-  } */
-
   .fast, .blinking {
     display: none;
   }
@@ -1007,6 +1124,11 @@ justify-content: space-between;
 
   h2 {
     font-size: 1.5em;
+  }
+
+  h3 {
+    width: 75%;
+    font-size: 1.1em;
   }
 
   #headshot {
@@ -1043,10 +1165,6 @@ justify-content: space-between;
     display: none;
   }
 
-  #closebtn {
-    /* right: -25px; */
-  }
-
   .wbox img {
     /* display: none; */
     width: 80vw;
@@ -1055,6 +1173,7 @@ justify-content: space-between;
 
   .wbox {
     font-size: .5em;
+    width: 90%;
   }
 
   .wcontainer {
@@ -1079,9 +1198,9 @@ justify-content: space-between;
     font-size: 5em;
   }
 
-  /* .wheader {
-    margin-top: -40%;
-  } */
+  .wheader {
+    margin-top: -60%!important;
+  }
 
   #topLeft {
     margin-top: 5%;
@@ -1157,6 +1276,25 @@ justify-content: space-between;
     font-size: 1em;
     padding: 2%;
     margin-right: 5%!important;
+  }
+  
+  .iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+  }
+
+  .iframe-container iframe {
+     border: 0;
+     height: 100%;
+     left: 0;
+     position: absolute;
+     top: 0;
+     width: 100%;
+  }
+
+  .tube {
+    width: 100%;
   }
 
   .text,
